syntax="proto3";
option go_package = "./proto";
package greet_service;


service greet_service{
    rpc SayHello(NoParam) returns (HelloResponse);
    rpc SayHelloServerStreaming(NamesList) returns (stream HelloResponse);
    rpc SayHelloClientStreaming(stream HelloRequest) returns (MessageList);
    rpc SayHelloBiderectionalStreaming(stream HelloRequest) returns (stream HelloResponse);

} 

message NoParam{};

message HelloRequest{
    string name=1;
}
message HelloResponse{
    string message=1;
}          
message NamesList{
    repeated string name=1;
}
message MessageList{
    repeated string messages=1;
}